--- a/resources/assets/sass/story/elements/jsembed.scss
+++ b/resources/assets/sass/story/elements/jsembed.scss
@@ -1,6 +1,5 @@
 .story-element-embed {
     position: relative;
-    float: left;
     width: 100%;
     margin-bottom: 20px;
     iframe {
