--- a/resources/assets/sass/story/elements/references.scss
+++ b/resources/assets/sass/story/elements/references.scss
@@ -5,7 +5,6 @@
     font-family: $merri;
     width: 100%;
     position: relative;
-    float: left;
     margin-bottom: 20px;
     p {
         font-family: $merri;
