--- a/resources/assets/sass/story/elements/soundcloud.scss
+++ b/resources/assets/sass/story/elements/soundcloud.scss
@@ -1,12 +1,10 @@
 .story-element-soundcloud-audio {
     width: 100%;
     position: relative;
-    float: left;
     margin: em(20) 0;
     @include breakpoint($pc) {
         width: 100%;
         position: relative;
-        float: left;
         iframe {
            width: 100%;
            height: 400px;
