--- a/resources/assets/sass/story/elements/title.scss
+++ b/resources/assets/sass/story/elements/title.scss
@@ -6,7 +6,6 @@
   font-family: $merri;
   width: 100%;
   position: relative;
-  float: left;
   margin: 10px 0px;
   p {
     font-family: $merri;
