--- a/resources/assets/sass/story/elements/youtube.scss
+++ b/resources/assets/sass/story/elements/youtube.scss
@@ -1,7 +1,6 @@
 .story-element-youtube-video {
     width: 100%;
     position: relative;
-    float: left;
     margin: em(20) 0;
     iframe  {
        width: 300px;
